--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,4 @@ edition = "2021"
 solana-sdk = "~1.18"
 solana-client = "~1.18"
 solana-account-decoder = "~1.18"
+dotenv = "0.15"  # Add this line
