--- a/example/Cargo.toml
+++ b/example/Cargo.toml
@@ -11,3 +11,4 @@ solana-sdk = { workspace = true }
 solana-client = { workspace = true }
 bincode = "1.3.3"
 shellexpand = "3.1.0"
+dotenv = "0.15"  # Add this line
